; ModuleID = '/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_startserver.c_ServerOptions_Cache.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/q3_ui/extr_ui_startserver.c_ServerOptions_Cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GAMESERVER_BACK0 = common dso_local global i32 0, align 4
@GAMESERVER_BACK1 = common dso_local global i32 0, align 4
@GAMESERVER_FIGHT0 = common dso_local global i32 0, align 4
@GAMESERVER_FIGHT1 = common dso_local global i32 0, align 4
@GAMESERVER_SELECT = common dso_local global i32 0, align 4
@GAMESERVER_UNKNOWNMAP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ServerOptions_Cache() #0 {
  %1 = load i32, i32* @GAMESERVER_BACK0, align 4
  %2 = call i32 @trap_R_RegisterShaderNoMip(i32 %1)
  %3 = load i32, i32* @GAMESERVER_BACK1, align 4
  %4 = call i32 @trap_R_RegisterShaderNoMip(i32 %3)
  %5 = load i32, i32* @GAMESERVER_FIGHT0, align 4
  %6 = call i32 @trap_R_RegisterShaderNoMip(i32 %5)
  %7 = load i32, i32* @GAMESERVER_FIGHT1, align 4
  %8 = call i32 @trap_R_RegisterShaderNoMip(i32 %7)
  %9 = load i32, i32* @GAMESERVER_SELECT, align 4
  %10 = call i32 @trap_R_RegisterShaderNoMip(i32 %9)
  %11 = load i32, i32* @GAMESERVER_UNKNOWNMAP, align 4
  %12 = call i32 @trap_R_RegisterShaderNoMip(i32 %11)
  ret void
}

declare dso_local i32 @trap_R_RegisterShaderNoMip(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
